Changes opacity and corrects modal content alignment.

--- a/frontend/src/css/modal.css
+++ b/frontend/src/css/modal.css
@@ -13,7 +13,7 @@
 
 .modal-content {
   background-color: #2b2b2b;
-  opacity: 93%;
+  opacity: 97%;
   margin: 15% auto;
   border: 1px solid #888;
   width: 60%;
@@ -28,6 +28,7 @@
 .add-file-form > * {
   margin: 5px 0px;
   margin-right: 20px;
+  width: 80%;
 }
 
 .login-form,
